--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <h1>Hello World, I am making changes!</h1>
 </body>
 
 </html>
